--- a/.github/workflows/sub-release.yaml
+++ b/.github/workflows/sub-release.yaml
@@ -34,19 +34,17 @@ jobs:
       - name: Unlink Source Repo
         run: |
           rm -rf repo
-      - name: Bring Base Repo
+      - name: Bring Release Base Repo
         uses: actions/checkout@v2
         with:
           path: fused
           repository: pinkforest/release-packager
-      - name: Fuse Connector Source
+      - name: Prepare Release Base Repo
         run: |
           cd fused/;find -not -path "./.git/*" -not -name ".git" -exec git rm -r {} +
+      - name: Fuse Connector Source
+        run: |
           cp -R ../connector-src/* ./
-##          cd fused/; git add ./*
-#      - name: Remove Extra Stuff
-#        run: |
-#          cd fused/; git rm -r .github
       - name: Commit Fused Isolated Connector
         uses: EndBug/add-and-commit@v8
         with:
@@ -62,43 +60,21 @@ jobs:
       - name: Release 
         uses: ncipollo/release-action@v1
         with:
-          tag: v${{ env.TAG_VERSION }}-${{ github.event.inputs.name }}
+          tag: ${{ github.event.inputs.name }}-${{ env.TAG_VERSION }}
           draft: false
           prerelease: false
           commit: fluvio-connect-${{ github.event.inputs.name }}-v${{ env.TAG_VERSION }}
           removeArtifacts: true
           allowUpdates: true
           generateReleaseNotes: true
-          artifacts: "./release-src.tar"
+          //artifacts: "./release-src.tar"
           token: ${{ secrets.GITHUB_TOKEN }}
-#      - name: Release
-#        uses: actions/create-release@v1
-#        id: create_release
-#        with:
-#          draft: false
-#          prerelease: false
-#          release_name: v${{ env.TAG_VERSION }}-${{ github.event.inputs.name }}
-#          tag_name: v${{ env.TAG_VERSION }}-${{ github.event.inputs.name }} 
+#      - name: Upload Connector Source
+#        uses: actions/upload-release-asset@v1
 #        env:
 #          GITHUB_TOKEN: ${{ github.token }}
-      - name: Upload Connector Source
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./release-src.tar.gz
-          asset_name: fluvio-connect-${{ github.event.inputs.name }}-src.tar.gz
-          asset_content_type: application/gzip
-#     - name: Create GitHub release
-#       id: release
-#       uses: softprops/action-gh-release@v1
-#       with:
-#         tag_name: v${{ env.TAG_VERSION }}-${{ github.event.inputs.name }}
-#         name: v${{ env.TAG_VERSION }}-${{ github.event.inputs.name }}
-#         files: |
-#          rust-connectors/sources/${{ github.event.inputs.name }}/
-# see; https://github.com/actions/upload-release-asset - prefer automated pulls
-#     - name: Upload Release Asset
-#       id: upload-release-asset 
-#       uses: actions/upload-release-asset@v1
+#        with:
+#          upload_url: ${{ steps.create_release.outputs.upload_url }}
+#          asset_path: ./release-src.tar.gz
+#          asset_name: fluvio-connect-${{ github.event.inputs.name }}-src.tar.gz
+#          asset_content_type: application/gzip
