--- a/ops/Dockerfile
+++ b/ops/Dockerfile
@@ -44,7 +44,7 @@ RUN /bin/ash -c "set -ex && \
     echo \"Preparing LLVM (Build) $LLVM_VERSION / ZIG (Install) $ZIG_VERSION for TargetArch: $TARGETARCH Platform: $TARGETPLATFORM\" && \
     mkdir -p /deps && \
     apk update && \
-    apk add gcc g++ automake autoconf pkgconfig python2-dev cmake ninja libc-dev binutils zlib-static libstdc++ python3-dev llvm-libunwind-dev perf lld linux-virt-dev musl-dev linux-headers grep"
+    apk add gcc g++ automake autoconf pkgconfig python2-dev cmake ninja libc-dev binutils zlib-static libstdc++ python3-dev llvm llvm-libunwind-dev perf lld linux-virt-dev musl-dev linux-headers grep"
 
 ##################################################
 # set_arch.sh - Set and Get /cross.env
@@ -62,6 +62,28 @@ RUN /bin/ash -c "set -ex && \
 #
 COPY set_arch.sh ./
 
+##################################################
+# Prepare the environment for LLVM cross compile
+#
+RUN /bin/ash -c "source set_arch.sh && \
+    llvm_target_platform $TARGETPLATFORM && \
+    . ./set_arch.sh && arch_env && \
+    echo \"Compiling LLVM in Host: $BUILDPLATFORM - LLVM_Arch: $CROSS_ARCH / LLVM_Triplet: $CROSS_TOOLCHAIN\""
+
+##################################################
+# build_llvm_target.sh
+##################################################
+# setup_environment()
+# - Setups LLVM CMAKE_FLAGS based on arch_env()
+# 
+# compile_target(llvm_target, extra_flags)
+# - Compile LLVM Target e.g. llvm/lld/clang/..
+# 
+COPY build_llvm_target.sh ./
+
+COPY build_llvm_all.sh ./
+RUN /bin/ash ./build_llvm_all.sh
+
 #################################################
 # Prepare the environment for & Install ZIG
 #
@@ -71,42 +93,24 @@ RUN /bin/ash -c "set -ex && source set_arch.sh && \
     . install_zig.sh && setup_environment && \
     install_target"
 
-##################################################
-# Prepare the environment for LLVM cross compile
-#
-RUN /bin/ash -c "source set_arch.sh && \
-    llvm_target_platform $TARGETPLATFORM && \
-    . ./set_arch.sh && arch_env && \
-    echo \"Cross Compiling LLVM in Host: $BUILDPLATFORM for LLVM_Arch: $CROSS_ARCH w/ Toolchain: $CROSS_TOOLCHAIN\""
-
-##################################################
-# build_llvm.sh
-##################################################
-# setup_environment()
-# - Setups LLVM CMAKE_FLAGS based on arch_env()
-# 
-# compile_target(llvm_target, extra_flags)
-# - Compile LLVM Target e.g. llvm/lld/clang/..
-# 
-COPY build_llvm.sh ./
-
 # Build - llvm
-RUN /bin/ash -c 'set -ex && . ./build_llvm.sh && setup_environment && compile_target llvm "-DLLVM_ENABLE_LIBXML2=OFF -DLLVM_ENABLE_TERMINFO=OFF"'
-
-# Build - lld
-RUN /bin/ash -c 'set -ex && . ./build_llvm.sh && setup_environment && compile_target lld'
-
-# Build - clang
-RUN /bin/ash -c 'set -ex && . ./build_llvm.sh && setup_environment && compile_target clang'
-
-# Build - lldb
-RUN /bin/ash -c 'set -ex && . ./build_llvm.sh && setup_environment && compile_target lldb'
-
+#RUN /bin/ash -c 'set -ex && . ./build_llvm.sh && setup_environment && compile_target llvm "-DLLVM_ENABLE_LIBXML2=OFF -DLLVM_ENABLE_TERMINFO=OFF"'
+#
+## Build - lld
+#RUN /bin/ash -c 'set -ex && . ./build_llvm.sh && setup_environment && compile_target lld'
+#
+## Build - clang
+#RUN /bin/ash -c 'set -ex && . ./build_llvm.sh && setup_environment && compile_target clang'
+#
+## Build - lldb
+#RUN /bin/ash -c 'set -ex && . ./build_llvm.sh && setup_environment && compile_target lldb'
 # Multiarch - Emulated/Native Stage
+
 FROM alpine
 
 COPY --from=build /llvm /llvm
 COPY --from=build /zig /zig
+#COPY --from=build /src /src
 
 RUN apk update && \
     apk add gcc g++ openssl openssl-dev automake autoconf make pkgconfig cmake ninja binutils zlib-static libstdc++ python3-dev linux-virt-dev musl-dev linux-headers grep git
