--- a/.github/workflows/rust-connector-release.yaml
+++ b/.github/workflows/rust-connector-release.yaml
@@ -58,7 +58,7 @@ jobs:
         run: |
           ls -laR ./
       - name: Builder
-        uses: pinkforest/release-builder@v1
+        uses: pinkforest/release-builder/.github/workflows/rust-builder.yml@main
         with:
           name: ${{ github.event.inputs.name }}
           serial: release-${{ github.event.inputs.name }}-v${{ env.TAG_VERSION }}
