--- a/.github/workflows/rust-connector-release.yaml
+++ b/.github/workflows/rust-connector-release.yaml
@@ -13,10 +13,10 @@ on:
 
 jobs:
   build:
-    - uses: pinkforest/release-builder/.github/workflows/rust-builder.yml@main
-      with:
-        name: ${{ github.event.inputs.name }}
-        serial: release-${{ github.event.inputs.name }}-v${{ env.TAG_VERSION }}
+    uses: pinkforest/release-builder/.github/workflows/rust-builder.yml@main
+    with:
+      name: ${{ github.event.inputs.name }}
+      serial: release-${{ github.event.inputs.name }}-v${{ env.TAG_VERSION }}
         
   release:
     runs-on: ubuntu-latest
