--- a/.github/workflows/rust-connector-release.yaml
+++ b/.github/workflows/rust-connector-release.yaml
@@ -12,12 +12,21 @@ on:
           - mqtt
 
 jobs:
+  # BUG: https://github.community/t/reusable-workflow-env-context-not-available-in-jobs-job-id-with/206111/13
+  set-vars:
+    outputs:
+      run_id: ${{ env.GITHUB_RUN_ID }}
+    runs-on: ubuntu-latest
+    steps:
+      - run: exit 0
+      
   build:
     uses: pinkforest/release-builder/.github/workflows/rust-builder.yml@main
+    needs: set-vars
     with:
       name: ${{ github.event.inputs.name }}
-      serial: "release-${{ github.event.inputs.name }}-v${{ env.GITHUB_RUN_ID }}"
-        
+      serial: "release-${{ github.event.inputs.name }}-v${{ needs.set-vars.run_id }}"
+      
   release:
     runs-on: ubuntu-latest
     steps:
