--- a/.github/workflows/rust-connector-release.yaml
+++ b/.github/workflows/rust-connector-release.yaml
@@ -29,6 +29,7 @@ jobs:
       
   release:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -69,6 +70,10 @@ jobs:
           new_branch: fluvio-connect-${{ github.event.inputs.name }}-v${{ env.TAG_VERSION }}
           add: '.'
           cwd: './fused/'
+      - name: Download Build artifacts
+        uses: dawidd6/action-download-artifact@v2
+        with:
+          run_id: $${ github.run_id }
       - name: Ls
         run: |
           ls -laR ./
