--- a/.github/workflows/rust-connector-release.yaml
+++ b/.github/workflows/rust-connector-release.yaml
@@ -74,6 +74,7 @@ jobs:
         uses: dawidd6/action-download-artifact@v2
         with:
           run_id: $${ github.run_id }
+          workflow: pinkforest/release-builder/.github/workflows/rust-builder.yml
       - name: Ls
         run: |
           ls -laR ./
