--- a/.github/workflows/rust-connector-release.yaml
+++ b/.github/workflows/rust-connector-release.yaml
@@ -85,6 +85,9 @@ jobs:
       - name: Ls CWD
         run: |
           ls -laR ./
+      - name: Normalise binary names for Release artifacts
+        run: |
+          cd binaries ; find . -type f -name ${{ github.event.inputs.name }} -exec rename -n 's/\/.+/.bin/' '{}' \;          
       - name: Release 
         uses: ncipollo/release-action@v1
         id: create_release
