--- a/.github/workflows/rust-connector-release.yaml
+++ b/.github/workflows/rust-connector-release.yaml
@@ -12,31 +12,22 @@ on:
           - mqtt
 
 jobs:
-  # BUG: https://github.community/t/reusable-workflow-env-context-not-available-in-jobs-job-id-with/206111/13
-  set-vars-${{ github.event.inputs.name }}:
-    outputs:
-      run_id: ${{ github.run_id }}
-    runs-on: ubuntu-latest
-    steps:
-      - run: exit 0
       
-  build-${{ github.event.inputs.name }}:
+  build:
     uses: pinkforest/release-builder/.github/workflows/rust-builder.yml@main
-    needs: set-vars
     with:
       name: ${{ github.event.inputs.name }}
-#      serial: "release"
       
-  release-${{ github.event.inputs.name }}:
+  release:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Checkout repository
+      - name: Checkout Connectors repository
         uses: actions/checkout@v2
         with:
           path: repo
           repository: infinyon/fluvio-connectors
-      - name: Set Environment ${{ github.event.inputs.name }}
+      - name: Set TAG_VERSION for ${{ github.event.inputs.name }}
         shell: bash
         run: |
           echo "TAG_VERSION=`grep -m 1 -oP 'version\s*=\s*\"\K\d+\.\d+\.\d+(?=\")' repo/rust-connectors/sources/${{ github.event.inputs.name }}/Cargo.toml`" | tee -a $GITHUB_ENV
@@ -70,21 +61,10 @@ jobs:
           new_branch: fluvio-connect-${{ github.event.inputs.name }}-v${{ env.TAG_VERSION }}
           add: '.'
           cwd: './fused/'
-      - name: Ls CWD
-        run: |
-          ls -laR ./
-#      - name: Login GH CLI
-#        run: cd fused ; gh auth login --with-token < <(echo ${{ secrets.GITHUB_TOKEN }})          
-#      - name: Download Build artifacts
-#        run: |
-#          cd fused && gh run download ${{ github.run_id }}
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v2
         with:
           path: binaries
-      - name: Ls CWD
-        run: |
-          ls -laR ./
       - name: Normalise binary names for Release artifacts
         run: |
           cd binaries
@@ -99,16 +79,5 @@ jobs:
           prerelease: false
           commit: fluvio-connect-${{ github.event.inputs.name }}-v${{ env.TAG_VERSION }}
           removeArtifacts: true
-          allowUpdates: true
-          generateReleaseNotes: true
           artifacts: "./binaries/*"
           token: ${{ secrets.GITHUB_TOKEN }}
-#      - name: Upload Connector Binaries..
-#        uses: actions/upload-release-asset@v1
-#        env:
-#          GITHUB_TOKEN: ${{ github.token }}
-#        with:
-#          upload_url: ${{ steps.create_release.outputs.upload_url }}
-#          asset_path: ./release-src.tar.gz
-#          asset_name: fluvio-connect-${{ github.event.inputs.name }}-bin.tar.gz
-#          asset_content_type: application/gzip
