--- a/.github/workflows/rust-connector-release.yaml
+++ b/.github/workflows/rust-connector-release.yaml
@@ -17,10 +17,16 @@ jobs:
     uses: pinkforest/release-builder/.github/workflows/rust-builder.yml@main
     with:
       name: ${{ github.event.inputs.name }}
-      
+
+  docker-build:
+    uses: pinkforest/release-builder/.github/workflows/docker-builder.yml@main
+    needs: build
+    with:
+      name: ${{ github.event.inputs.name }}
+
   release:
     runs-on: ubuntu-latest
-    needs: build
+    needs: docker-build
     steps:
       - name: Checkout Connectors repository
         uses: actions/checkout@v2
@@ -65,6 +71,8 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           path: binaries
+      - name: LS
+        run: ls -laR /
       - name: Normalise binary names for Release artifacts
         run: |
           cd binaries
